agregue layja en body

--- a/index.html.erb
+++ b/index.html.erb
@@ -9,7 +9,7 @@
         <meta name="description" content="Este es el sitio web ficticio de Fotocol2000, una empresa de fotografía">
     </head>
     <body>
-        nohemi
+        nohemi layja
         <header>
         <h1>Este el Estudio Fotográfico Fotocol2000</h1>
         <p>Esta es la página donde podrás ver nuestros trabajos.</p>
